# hoshizora

./: .gitmodules  CMakeLists.txt  README.md
inc/: Camera.h  Camera.hpp  Color.hpp  ImageBuffer.hpp  Material.h  Material.hpp  Ray.h  Raycast.hpp  RenderCanvas.h  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  Sphere.h  Sphere.hpp
shaders/: raytracer.comp
src/: Camera.cpp  Color.cpp  ImageBuffer.cpp  Main.cpp  Raytracer.cpp  RenderCanvas.cpp  Renderer.cpp  Sphere.cpp  color.cpp
src/core/: Camera.cpp  Renderer.cpp
